# hermes-agent-simple

./: .gitignore  README.md  SIMPLE_HERMES_README.md  batch_runner.py  cli-config.yaml.example  cli.py  hermes-already-has-routines.md  model_tools.py  pyproject.toml  run.sh  run_agent.py  simple_hermes.md  toolsets.py  trajectory_compressor.py
agent/: __init__.py  account_usage.py  auxiliary_client.py  credential_pool.py  model_metadata.py  prompt_builder.py  title_generator.py  usage_pricing.py
cron/: scheduler.py
docs/: math-research-platform.md
gateway/: config.py  run.py
hermes_cli/: auth.py  auth_commands.py  commands.py  config.py  doctor.py  fallback_cmd.py  main.py  mcp_config.py  model_catalog.py  model_normalize.py  model_switch.py  models.py  platforms.py  providers.py  runtime_provider.py  setup.py  status.py  tips.py  tools_config.py  web_server.py
scripts/: build_model_catalog.py  contributor_audit.py  release.py  run_tests.sh
tests/simple/: test_agent_provider_scope.py  test_agent_transport_scope.py  test_build_assistant_message_scope.py  test_config_provider_scope.py  test_openrouter_identity_scope.py  test_prompt_cache_scope.py  test_reasoning_extra_body_scope.py
tools/: delegate_tool.py  image_generation_tool.py  send_message_tool.py  skills_hub.py  slash_confirm.py  terminal_tool.py  tool_backend_helpers.py  transcription_tools.py  tts_tool.py  web_tools.py
tools/browser_providers/: browser_use.py
tools/environments/: modal_utils.py
tui_gateway/: server.py
